--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>About | Daniel Callister</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <title>Daniel Callister</title>
 </head>
 
 <body>
 
-  <header id="masthead">
+  <header class="header-wrap">
     <div class="container">
-      <a href="index.html" id="logo">Daniel Callister</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+      <div class="header-name-box">Daniel Callister</div>
+      <div class="header-nav-box">
+        <div class="nav-flex-box">
+        </div>
+        <div class="nav-link-box">
+          <a class="nav-link" href="index.html">About</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="contact.html">Contact</a>
+        </div>
+      </div>
     </div>
   </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>About Me</h1>
-
-      <img src="assets/images/IMG_0984.jpg" class="auth-image" alt="Your Name">
-
-      <p>I am an amateur developer looking to go pro! I love all things sports; especially ice hockey, basketball, golf, and tennis. I was born in Washington D.C. but grew up in southern California.</p>
-
-      <p>I love to travel and meet new people. I love movies, writing, art, and anything creative. I hope to visit every country in the world! “Live each day like it’s your last!"</p>
-
+  <div class="container">
+    <section class="content-wrap">
+      <h1 class="content-heading">About Me</h1>
+      <img src="assets/images/IMG_0984.jpg" id="aboutPhoto" alt="Dan Picture">
+      <p>
+      I am an amateur developer looking to go pro! I love all things sports; especially ice hockey, basketball, golf, and tennis. I was born in Washington D.C. but grew up in southern California.
+      </p>
+      <br>
+      <p>
+      I love to travel and meet new people. I love movies, writing, art, and anything creative. I hope to visit every country in the world! “Live each day like it’s your last!"
+      </p>
+      
     </section>
 
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
+    <aside class="connect-wrap">
+      <h2 class="connect-heading">Connect with Me</h2>
+      <a href="https://github.com/kayne987" target="_blank"><img src="assets/images/github.png" class="img-fluid connect-icon" id="github" alt="Daniel GitHub"></a>
+      <a href="https://www.linkedin.com/in/daniel-callister-byu/" target="_blank"><img src="assets/images/linkedin.png" class="img-fluid connect-icon" id="linkedin" alt="Dan LinkedIn"></a>
+      <a href="https://stackoverflow.com/users/6942382/d-callister" target="_blank"><img src="assets/images/overflow.png" class="img-fluid connect-icon" id="stackover" alt="Dan Stack Overflow"></a>
+    </aside>
 
-        <a href="https://github.com/kayne987"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/daniel-callister-b1534a143/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/6942382/d-callister?tab=profile"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-    </section>
   </div>
 
-  <footer>
-    <div class="container">
-      Copyright &copy; 2016 Daniel Callister
-    </div>
+  <footer class="footer">
+    &copy; Copyright 2017 Daniel Callister
   </footer>
-</body>
 
-</html>
+</body>
