--- a/contact.html
+++ b/contact.html
@@ -1,68 +1,57 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Contact | Daniel Callister</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <title>Contact</title>
 </head>
 
 <body>
 
-  <header id="masthead">
+  <header class="header-wrap">
     <div class="container">
-      <a href="index.html" id="logo">Daniel Callister</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+      <div class="header-name-box">Daniel Callister</div>
+      <div class="header-nav-box">
+        <div class="nav-flex-box">
+        </div>
+        <div class="nav-link-box">
+          <a class="nav-link" href="index.html">About</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="contact.html">Contact</a>
+        </div>
+      </div>
     </div>
   </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Contact</h1>
-
-      <form id="contact-form">
-        <ul>
-          <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-          </li>
-          <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-          </li>
-          <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
-          </li>
-        </ul>
-        <input type="submit">
+  <div class="container">
+    <section class="content-wrap">
+      <h1 class="content-heading">Contact</h1>
+      <form>
+        <label class="form-text">Name</label><br>
+        <input type="text" class="form-input" name="name" placeholder="John Smith"><br>
+        <label class="form-text">Email</label><br>
+        <input type="text" class="form-input" name="email" placeholder="example@gmail.com"><br>
+        <label class="form-text">Message</label><br>
+        <textarea class="form-input form-textarea"></textarea>
+        <button class="form-button">Submit</button>
       </form>
-
     </section>
 
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
+    <aside class="connect-wrap">
+      <h2 class="connect-heading">Connect with Me</h2>
+      <a href="https://github.com/kayne987" target="_blank"><img src="assets/images/github.png" class="img-fluid connect-icon" id="github" alt="Daniel GitHub"></a>
+      <a href="https://www.linkedin.com/in/daniel-callister-byu/" target="_blank"><img src="assets/images/linkedin.png" class="img-fluid connect-icon" id="linkedin" alt="Dan LinkedIn"></a>
+      <a href="https://stackoverflow.com/users/6942382/d-callister" target="_blank"><img src="assets/images/overflow.png" class="img-fluid connect-icon" id="stackover" alt="Dan Stack Overflow"></a>
+    </aside>
 
-        <a href="https://github.com/kayne987"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/daniel-callister-b1534a143/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/6942382/d-callister?tab=profile"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-      </div>
-    </section>
   </div>
 
-  <footer>
-    <div class="container">
-      Copyright &copy; 2016 Daniel Callister
-    </div>
+  <footer class="footer">
+    &copy; Copyright 2017 Daniel Callister
   </footer>
-</body>
 
-</html>
+</body>
