--- a/portfolio.html
+++ b/portfolio.html
@@ -1,76 +1,94 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Portfolio | Daniel Callister</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <title>Portfolio</title>
 </head>
 
 <body>
 
-  <header id="masthead">
+  <header class="header-wrap">
     <div class="container">
-      <a href="index.html" id="logo">Daniel Callister</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+      <div class="header-name-box">Daniel Callister</div>
+      <div class="header-nav-box">
+        <div class="nav-flex-box">
+        </div>
+        <div class="nav-link-box">
+          <a class="nav-link" href="index.html">About</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="contact.html">Contact</a>
+        </div>
+      </div>
     </div>
   </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
-
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-
-        <h3>Hangman</h3>
+  <div class="container">
+    <section class="content-wrap">
+      <h1 class="content-heading">Portfolio</h1>
+      <div class="portfolio-row">
+        <div class="portfolio-box">
+          <a href="" target="_blank">
+            <img src="assets/images/hangman.png" class="portfolio-img" alt="Hangman">
+            <div class="portfolio-text-box">
+              <div class="portfolio-text">Hangman</div>
+            </div>
+          </a>
+        </div>
+        <div class="portfolio-box">
+          <a href="" target="_blank">
+            <img src="assets/images/rpg.jpg" class="portfolio-img" alt="RPG">
+            <div class="portfolio-text-box">
+              <div class="portfolio-text">RPG Game</div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
+      <div class="portfolio-row">
+        <div class="portfolio-box">
+          <a href="" target="_blank">
+            <img src="assets/images/trivia_resize.jpg" class="portfolio-img" alt="Trivia">
+            <div class="portfolio-text-box">
+              <div class="portfolio-text">Trivia Game</div>
+            </div>
+          </a>
+        </div>
+        <div class="portfolio-box">
+          <a href="" target="_blank">
+            <img src="assets/images/dice_resize.jpg" class="portfolio-img" alt="Rutgers">
+            <div class="portfolio-text-box">
+              <div class="portfolio-text">Rutgers Info Widget</div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+      <div class="portfolio-row portfolio-bottom-row">
+        <div class="portfolio-box">
+          <a href="" target="_blank">
+            <img src="assets/images/prs_resize.jpg" class="portfolio-img" alt="Paper Rock Scissors">
+            <div class="portfolio-text-box">
+              <div class="portfolio-text">Paper Rock Scissors</div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
     </section>
 
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
+    <aside class="connect-wrap">
+      <h2 class="connect-heading">Connect with Me</h2>
+      <a href="https://github.com/kayne987" target="_blank"><img src="assets/images/github.png" class="img-fluid connect-icon" id="github" alt="Daniel GitHub"></a>
+      <a href="https://www.linkedin.com/in/daniel-callister-byu/" target="_blank"><img src="assets/images/linkedin.png" class="img-fluid connect-icon" id="linkedin" alt="Dan LinkedIn"></a>
+      <a href="https://stackoverflow.com/users/6942382/d-callister" target="_blank"><img src="assets/images/overflow.png" class="img-fluid connect-icon" id="stackover" alt="Dan Stack Overflow"></a>
+    </aside>
 
-        <a href="https://github.com/kayne987"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/daniel-callister-b1534a143/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/6942382/d-callister?tab=profile"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-      </div>
-    </section>
   </div>
 
-  <footer>
-    <div class="container">
-      Copyright &copy; 2016 Daniel Callister
-    </div>
+  <footer class="footer">
+    &copy; Copyright 2017 Daniel Callister
   </footer>
-</body>
 
-</html>
+</body>
