--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
     <aside class="connect-wrap">
       <h2 class="connect-heading">Connect with Me</h2>
-      <a href="https://github.com/kayne987" target="_blank"><img src="assets/images/github.png" class="img-fluid connect-icon" id="github" alt="Daniel GitHub"></a>
+      <a href="https://github.com/dancallister" target="_blank"><img src="assets/images/github.png" class="img-fluid connect-icon" id="github" alt="Daniel GitHub"></a>
       <a href="https://www.linkedin.com/in/daniel-callister-byu/" target="_blank"><img src="assets/images/linkedin.png" class="img-fluid connect-icon" id="linkedin" alt="Dan LinkedIn"></a>
       <a href="https://stackoverflow.com/users/6942382/d-callister" target="_blank"><img src="assets/images/overflow.png" class="img-fluid connect-icon" id="stackover" alt="Dan Stack Overflow"></a>
     </aside>
